<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_blue"
    tools:context=".Feed">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:text="@string/feedback"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:layout_gravity="center_horizontal"/>

    <EditText
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginTop="20sp"
    android:id="@+id/username"
    android:hint="@string/userName"
    />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20sp"
        android:id="@+id/emailfeed"
        android:hint="@string/email"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/topic"
        android:hint="@string/topic_feedback"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:id="@+id/feedback"
        android:hint="@string/feedback"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback"
        android:onClick="feedbacksent"/>


</LinearLayout>