<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".MainActivity"
    android:background="@drawable/gradient_pink">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/el"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/E_name"
            android:textSize="14sp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/emailthis"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/email"
            android:layout_marginTop="5dp"
            android:textSize="8sp"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"

            />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="vertical">



            <!--for buttons-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <!--shuffle Button-->

                <Button
                    android:id="@+id/shuffleBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/shuffle_btn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:drawableTop="@drawable/shuffle_icon"
                    android:text="@string/shuffle_btn"
                    android:textSize="10sp"
                    android:textColor="@color/black"
                    android:textAllCaps="false"/>
                <!--Albums Activity -->

                <!--Favourites Button-->

                <!--Favourites Button-->
                <Button
                    android:textSize="10sp"
                    android:id="@+id/favouriteBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/favourites_btn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:drawableTop="@drawable/favourite_icon"
                    android:text="@string/favourites_btn"
                    android:textColor="@color/black"
                    android:textAllCaps="false"/>
                <!--Playlists Button-->
                <Button
                    android:textSize="10sp"
                    android:id="@+id/playlistBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/playlist_btn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:drawableTop="@drawable/playlist_icon"
                    android:text="@string/playlist_btn"
                    android:textColor="@color/black"
                    android:textAllCaps="false"/>
                <Button
                    android:textSize="10sp"
                    android:id="@+id/changeMyLanguage"
                    android:text="@string/changeLang"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:drawableTop="@drawable/language"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/sort_icon"
                    android:tint="@color/cool_pink"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/cool_green"
                    android:padding="5dp"/>




            </LinearLayout>



            <!--Total Songs Button-->

            <TextView
                android:id="@+id/totalSongs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_songs"
                android:textColor="@color/black"
                android:layout_margin="10dp"/>
            <TextView
                android:id="@+id/totalEL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_songs"
                android:textSize="1sp"
                android:textColor="@color/black"
                android:visibility="invisible"/>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/musicRV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                android:scrollbarThumbVertical="@drawable/scroll_bar_icon"/>

        </LinearLayout>
        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/nowPlaying"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:name="com.partha_pratim_sarmah_rahul_dev_mahato.Soundtrackoflife.NowPlaying"
            tools:layout="@layout/fragment_now_playing"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/activity_nav_header"
        android:backgroundTint="@color/white"
        app:menu="@menu/nav_menu"/>

</androidx.drawerlayout.widget.DrawerLayout>