<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectionActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="2dp">


        <ImageButton
            android:id="@+id/backBtnSA"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:src="@drawable/back_icon"
            android:contentDescription="@string/back_btn"
            android:backgroundTint="@android:color/transparent"
            app:tint="@color/black"
            android:layout_margin="5dp"/>


        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchViewSA"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:queryHint="@string/search_song"
            app:searchIcon="@drawable/search_icon"
            android:focusable="false"
            app:iconifiedByDefault="false"
            android:background="@drawable/custom_search_view"
            android:layout_margin="5dp"/>


    </LinearLayout>
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playlist_selection"
        android:textColor=" #FF0000"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.098" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/selectionRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingBottom="50dp"
        android:scrollbarThumbVertical="@drawable/scroll_bar_icon"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.039" />


</androidx.constraintlayout.widget.ConstraintLayout>